--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <div class="terms-container">
         <h1>미스터 라마씨 봇 이용약관</h1>
-        <p><strong>최종 업데이트 날짜</strong>: 2024년 6월 17일</p>
+        <p><strong>최종 업데이트 날짜</strong>: 2024년 12월 17일</p>
         
         <p>안녕하세요! 디스코드 봇 <strong>"미스터 라마씨"</strong>를 이용해 주셔서 감사합니다. 이 이용약관(이하 "약관")은 봇의 사용과 관련된 규칙을 안내하며, 봇을 이용함으로써 귀하는 본 약관에 동의하는 것으로 간주됩니다.</p>
         
@@ -69,7 +69,7 @@
         <h2>7. 문의사항</h2>
         <p>이용약관과 관련된 질문이나 문의사항이 있을 경우, 아래 연락처로 문의해 주세요:</p>
         <ul>
-            <li><strong>문의 채널</strong>: <a href="#">디스코드 서버 초대 링크 또는 이메일</a></li>
+            <li><strong>문의 채널</strong>: <a href="#">https://discord.gg/g9mDMJqBgQ</a></li>
         </ul>
     </div>
 </body>
