--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h2>7. 문의사항</h2>
         <p>이용약관과 관련된 질문이나 문의사항이 있을 경우, 아래 연락처로 문의해 주세요:</p>
         <ul>
-            <li><strong>문의 채널</strong>: <a href="#">https://discord.gg/g9mDMJqBgQ</a></li>
+            <li><strong>문의 채널</strong>: <a href="https://discord.gg/g9mDMJqBgQ">문의 디스코드</a></li>
         </ul>
     </div>
 </body>
